# Preprocessor

./: CMakeLists.txt  README.md  lexer.cpp  lexer.h  parser.cpp  parser.h  programa1  programa2  programa3  programa4
include/: ASTPrinter.h  CodeGenerator.h  CommentRemover.h  CompileHelper.h  Compiler.h  FileHandler.h  Preprocessor.h  SemanticAnalyzer.h  SymbolTable.h  ThreeAddressCode.h  TokenTypes.h  WhitespaceMinifier.h  ast.h  lexer.h  parser.h
src/: ASTPrinter.cpp  CodeGenerator.cpp  CommentRemover.cpp  CompileHelper.cpp  Compiler.cpp  FileHandler.cpp  Preprocessor.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp  ThreeAddressCode.cpp  WhitespaceMinifier.cpp  lexer.cpp  main.cpp  parser.cpp
tests/: test1.ling  test2.ling  test3_erro.ling  test4_erro.ling
